welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:3: error: '=' expected but ';' found.
	for (i<-0 to tab.length-1){
^