welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
	var x=-1
	for (i<-0 to tab.length-1){
		if (tab(i)==lookingFor) x=i
	}
	return x	
}
